1623279966 | 55 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_french.txt,  M content/vrmonitor/translations/vrmonitor_errors_german.txt,  M content/vrmonitor/translations/vrmonitor_errors_greek.txt,  M content/vrmonitor/translations/vrmonitor_errors_hungarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_japanese.txt,  M conte
https://steamdb.info/patchnotes/6842808/

--- a/content/vrmonitor/translations/vrmonitor_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_czech.txt
@@ -210,9 +210,9 @@
 "MenuAction_Workshop" "Workshop"
 "MenuAction_Workshop_UploadItem" "Nahrát nové pozadí"
 "MenuAction_Workshop_EditItem" "Upravit stávající pozadí"
-"MenuAction_Workshop_RunTools" "Vytvořit/Upravit prostředí"
+"MenuAction_Workshop_RunTools" "Vytvořit/upravit prostředí"
 "MenuAction_Workshop_ViewWiki" "Wiki k prostředím SteamVR"
-"MenuAction_Workshop_Browse" "Procházet Workshop"
+"MenuAction_Workshop_Browse" "Procházet workshop"
 "MenuAction_ModelDirectory_Browse" "Procházet adresář modelu"
 "MenuAction_WakeupAllBaseStations" "Probudit základní stanice"
 "MenuAction_KnockKnock" "Ťuky ťuk"
@@ -595,7 +595,7 @@
 "MessageBox_Yes" "Ano"
 "MessageBox_RestartSteamVR" "Restartování režimu SteamVR..."
 "MessageBox_Retry" "Zkusit znovu"
-"MessageBox_Done" "Hotovo"
+"MessageBox_Done" "OK"
 "MessageBox_RestartNow" "Restartovat režim SteamVR"
 "MessageBox_RestartLater" "Restartovat později"
 "MessageBox_Next" "Další"
@@ -888,7 +888,7 @@
 "NeedRoomSetupNoLaunch_Message" "Please perform Room Setup"
 "NeedRoomSetupNoLaunch_Message" "Tuto aplikaci nelze spustit, dokud nebude dokončena příprava místnosti. Chcete nyní spustit přípravu místnosti?"
 
-"WorkshopUpload_DialogTitle"	"Nástroj Workshopu režimu SteamVR"
+"WorkshopUpload_DialogTitle"	"Nástroj workshopu režimu SteamVR"
 "WorkshopUpload_NoItem"			"(Nová)"
 "WorkshopUpload_SelectExisting"	"Upravit"
 "WorkshopUpload_SelectContentType"	"Typ"
@@ -918,7 +918,7 @@
 "WorkshopUpload_Tag_Game"						"Hra"
 "WorkshopUpload_Tag_Abstract"					"Abstraktní"
 "WorkshopUpload_Error"			"Chyba"
-"WorkshopUpload_Error_SteamClientNotFound"	"Nelze spustit nástroj Workshopu režimu SteamVR, protože není spuštěn klient služby Steam."
+"WorkshopUpload_Error_SteamClientNotFound"	"Nelze spustit nástroj workshopu režimu SteamVR, protože není spuštěn klient služby Steam."
 "WorkshopUpload_Error_NoTitle"	"Zadejte název"
 "WorkshopUpload_Error_NoDesc"		"Zadejte popis"
 "WorkshopUpload_Error_DescTooLong"	"Popis nemůže být delší než 8000 znaků."
@@ -941,7 +941,7 @@
 "WorkshopUpload_Error_Generic"		"Při nahrávání souboru došlo k chybě. Zkuste to později znovu."
 "WorkshopUpload_Error_NoItemsToEdit"	"Nebyly nalezeny žádné upravitelné stávající soubory!"
 "WorkshopUpload_Progress_Title"		"Workshop režimu SteamVR"
-"WorkshopUpload_Progress_Start"		"Navazování spojení s Workshopem..."
+"WorkshopUpload_Progress_Start"		"Navazování spojení s workshopem..."
 "WorkshopUpload_Progress_PreparingConfig"		"Příprava konfigurace..."
 "WorkshopUpload_Progress_PreparingContent"		"Zpracovávání souborů..."
 "WorkshopUpload_Progress_UploadingContent"		"Nahrávání souborů..."
