--- a/content/vrmonitor/translations/vrmonitor_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_romanian.txt
@@ -168,7 +168,7 @@
 "MenuAction_SteamVRHardwareDiscussions" "Discuții Hardware SteamVR"
 "MenuAction_SteamVRDeveloperSupport" "Asistență pentru dezvoltatorii SteamVR"
 "MenuAction_SteamWorksDeveloperSupport" "Asistență pentru dezvoltatorii SteamWorks"
-"MenuAction_CreateSystemReport" "Creează raportul de sistem"
+"MenuAction_CreateSystemReport" "Creează un raport de sistem"
 "MenuAction_ResetSeatedPosition" "Resetează poziția așezat"
 "MenuAction_SystemReportViewer" "Vizualizator pentru rapoartele de sistem"
 "MenuAction_DisplayFrameTiming" "Sincronizare avansată a cadrelor"
@@ -440,7 +440,7 @@
 "Settings_Audio_AudioRecord"  "Dispozitiv de intrare audio"
 "Settings_Audio_HDMIGain"  "Activează reducerea de amplificare a semnalului audio HDMI pentru VIVE"
 "Settings_Audio_Default"  "Implicit"
-"Settings_Audio_AudioMirrorPlay"  "Duplichează audio pe dispozitiv"
+"Settings_Audio_AudioMirrorPlay"  "Oglindește semnalul audio pe dispozitiv"
 "Settings_Audio_AudioMirrorUnsupported"  "Oglindirea audio nu este compatibilă cu acest calculator."
 "Settings_Audio_AudioMirrorEnable"  "Activează oglindirea audio"
 
@@ -461,7 +461,7 @@
 "SystemReport_Title" "Raport de sistem"
 "SystemReport_Refresh" "Reîmprospătează"
 "SystemReport_CopyToClipboard" "Copiază în memoria temporară"
-"SystemReport_SaveToFile" "Salvează în fișier"
+"SystemReport_SaveToFile" "Salvează ca fișier"
 "SystemReport_SaveSystemReport" "Salvează raportul de sistem"
 "SystemReport_UnableToOpenFile" "Fișierul nu poate fi deschis"
 "SystemReport_Data" "Date"
