--- a/content/vrmonitor/translations/vrmonitor_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_russian.txt
@@ -139,7 +139,7 @@
 "SteamVRSystemState_Ready_Application" "%1"
 "SteamVRSystemState_Connecting_Application_Lighthouse" "Убедитесь, что шлем видит базовые станции"
 "SteamVRSystemState_Connecting_Application_InsideOutCamera" "Убедитесь, что шлем видит игровую зону"
-"SteamVRSystemState_Connecting_Application_OutsideInCamera" "Убедитесь, что трекинг-камеры видят шлем"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera" "Убедитесь, что камеры отслеживания видят шлем"
 "SteamVRSystemState_Standby_Application" "Наденьте шлем, чтобы запустить виртуальную реальность"
 "SteamVRSystemState_PseudoState_Welcome_Application" "Подключите VR-шлем"
 
@@ -358,7 +358,7 @@
 "Settings_USB_Component_Hub" "Разветвитель"
 "Settings_USB_Component_HubController" "Контроллер разветвителя"
 "Settings_USB_Component_HubBluetooth" "Bluetooth"
-"Settings_USB_Component_WatchmanBoard" "Трекинг-плата"
+"Settings_USB_Component_WatchmanBoard" "Плата отслеживания"
 "Settings_USB_Component_Camera" "Камера"
 "Settings_USB_Component_Audio" "Звуковое устройство"
 "Settings_USB_Component_HTCBoard" "Основная плата"
@@ -378,7 +378,7 @@
 
 "Settings_Developer_General_Header" "Разработчик"
 "Settings_Advanced_Status_Header" "Проверка состояния"
-"Settings_Advanced_RoomAndTracking_Header" "Комната и трекинг"
+"Settings_Advanced_RoomAndTracking_Header" "Комната и отслеживание"
 "Settings_Advanced_Reset_Header" "Сбросить"
 "Settings_Advanced_Paths_Header" "Расположения"
 "Settings_Advanced_DirectMode_Header" "Режим прямого отображения"
@@ -812,9 +812,9 @@
 "FirmwareWizard_ProgressPercentStarting" "[ Запуск... ]"
 "FirmwareWizard_ProgressPercentFinishing" "[ Завершение... ]"
 
-"FirmwareWizard_WatchmanUpdate" "Обновление трекинг-устройства"		
-"FirmwareWizard_WatchmanFPGAUpdate" "Обновление трекинг-устройства"
-"FirmwareWizard_WatchmanRecovery" "Обновление трекинг-устройства"
+"FirmwareWizard_WatchmanUpdate" "Обновление отслеживающего устройства"		
+"FirmwareWizard_WatchmanFPGAUpdate" "Обновление отслеживающего устройства"
+"FirmwareWizard_WatchmanRecovery" "Обновление отслеживающего устройства"
 "FirmwareWizard_DongleUpdate" "Обновление беспроводного ресивера"
 "FirmwareWizard_CameraUpdate" "Обновление камеры"
 "FirmwareWizard_CameraRecovery" "Обновление камеры"
@@ -1099,14 +1099,14 @@
 "ScanForBaseStations_Scanning"	"Поиск базовых станций…\n\nОсталось %1 сек."
 "ScanForBaseStation_Incomplete" "Поиск базовых станций…\n\nНе завершён."
 "ScanForBaseStation_FoundStations" "Поиск завершён"
-"ScanForBaseStation_NoKnownStations" "Поиск завершён.\n\nВ пределах досягаемости есть действующие базовые станции, но ни одна из них ещё не использовалась для трекинга."
+"ScanForBaseStation_NoKnownStations" "Поиск завершён.\n\nВ пределах досягаемости есть действующие базовые станции, но ни одна из них ещё не использовалась для отслеживания."
 "ScanForBaseStation_NoStationsFound" "Поиск завершён.\n\nВ пределах досягаемости нет базовых станций."
 "ScanForBaseStations_Refresh" "Повторить поиск"
 
 "BS20_ConfigureChannel_Title"								"Базовая станция 2.0 — настройка каналов"
 "BS20_ConfigureChannel_BluetoothRequired"					"Для настройки каналов требуется Bluetooth-соединение.\n\nВключите Bluetooth в настройках."
 "BS20_ConfigureChannel_BaseStationName"						"Настройка %1 в канале %2"
-"BS20_ConfigureChannel_Description"							"Выберите неиспользуемый канал для базовой станции, чтобы избежать потенциальных конфликтов трекинга."
+"BS20_ConfigureChannel_Description"							"Выберите неиспользуемый канал для базовой станции, чтобы избежать потенциальных конфликтов отслеживания."
 "BS20_ConfigureChannel_InUseByPrefix"						"Используется:"
 "BS20_ConfigureChannel_Legend"								"Обозначает канал, используемый другими базовыми станциями в зоне радиосвязи."
 "BS20_ConfigureChannel_AutomaticConfiguration"				"Автонастройка"
@@ -1134,8 +1134,8 @@
 "BS20_ConfigureChannel_ProgressConnecting"					"\nПодключение к базовым станциям...\n"
 "BS20_ConfigureChannel_ProgressWritingChannel"				"\nСохранение каналов...\n"
 "BS20_ConfigureChannel_ProgressCancelling"					"\nОтмена...\n"
-"BS20_ConfigureChannel_VisibleNowInTracking"				"Теперь видно в этой сессии трекинга."
-"BS20_ConfigureChannel_ObservedInTracking"					"Замечено в предыдущей сессии трекинга."
+"BS20_ConfigureChannel_VisibleNowInTracking"				"Теперь видно в этой сессии отслеживания."
+"BS20_ConfigureChannel_ObservedInTracking"					"Замечено в предыдущей сессии отслеживания."
 "BS20_ConfigureChannel_Identify"							"Нажмите, чтобы распознать базовую станцию."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"		"%1: для распознания требуется обновление устройства."
 "BS20_ConfigureChannel_RSSI"								"RSSI: %1"
@@ -1155,8 +1155,8 @@
 "BS_PowerManagement_RefreshLink"							"Обновить"
 "BS_PowerManagement_ForgetBase"								"Забыть это устройство"
 "BS_PowerManagement_BaseStations"							"Управляемые базовые станции"
-"BS_PowerManagement_VisibleNowInTracking"					"Теперь видно в этой сессии трекинга."
-"BS_PowerManagement_ObservedInTracking"						"Замечено в предыдущей сессии трекинга."
+"BS_PowerManagement_VisibleNowInTracking"					"Теперь видно в этой сессии отслеживания."
+"BS_PowerManagement_ObservedInTracking"						"Замечено в предыдущей сессии отслеживания."
 "BS_PowerManagement_Identify"								"Нажмите, чтобы обнаружить базовую станцию."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"			"Чтобы включить обнаружение устройства, необходимо обновить %1."
 "BS_PowerManagement_FailedToConnectRefresh"					"%1: подключение не удалось. Нажмите «Обновить», чтобы повторить попытку."
