--- a/content/vrmonitor/translations/vrmonitor_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_french.txt
@@ -161,7 +161,7 @@
 "MenuAction_AboutQt" "À propos de Qt"
 "MenuAction_Help" "Aide"
 "MenuAction_Devices" "Périphériques"
-"MenuAction_Developer" "Équipe de développement"
+"MenuAction_Developer" "Développement"
 "MenuAction_WebDevTools" "Outils de développement Web"
 "MenuAction_SteamVRWebsite" "Compatibilité avec SteamVR"
 "MenuAction_SteamVRCommunity" "Communauté SteamVR"
@@ -198,7 +198,7 @@
 "MenuAction_DisplayMirror" "Afficher la vue VR"
 "MenuAction_PerformanceGraph" "Afficher le graphique des performances"
 "MenuAction_ShowControllerBinding" "Paramètres du contrôleur"
-"MenuAction_ShowManageTrackers" "Gérer les Vive Trackers"
+"MenuAction_ShowManageTrackers" "Gérer les VIVE Trackers"
 "MenuAction_UpdateFirmware" "Mettre à jour le périphérique"
 "MenuAction_ForceFirmware" "Forcer la mise à jour du firmware"
 "MenuAction_DirectMode" "Mode d'affichage direct"
@@ -371,7 +371,7 @@
 "Settings_USB_ViveDevices" "<b>Périphériques</b>"
 "Settings_USB_PressRefresh" "<b>Cliquez sur Actualiser pour rechercher les connexions des périphériques...</b>"
 "Settings_USB_LookingForConnections" "<b>Recherche de connexions de périphériques...</b>"
-"Settings_USB_NoDevicesFound" "<font color=red><b>Aucun appareil Vive connecté.</b></font>"
+"Settings_USB_NoDevicesFound" "<font color=red><b>Aucun appareil VIVE connecté.</b></font>"
 
 "Settings_USB_ViveLinkBoxHeader" "<b>Boitier de liaison pour VIVE</b>"
 "Settings_USB_ViveHeadsetHeader" "<b>Casque</b>"
@@ -1219,9 +1219,9 @@
 "HeadsetView_MenuLabel" "Menu"
 "HeadsetView_PressKeyToExit" "Appuyez sur %1 pour quitter le mode plein écran"
 "HeadsetView_FullscreenButtonLabel" "Plein écran"
-"HeadsetView_DockButtonLabel" "Ancrer l'affichage VR"
-"HeadsetView_UndockButtonLabel" "Détacher l'affichage VR"
-"HeadsetView_HideButtonLabel" "Masquer l'affichage VR"
+"HeadsetView_DockButtonLabel" "Ancrer la vue VR"
+"HeadsetView_UndockButtonLabel" "Détacher la vue VR"
+"HeadsetView_HideButtonLabel" "Masquer la vue VR"
 "HeadsetView_EyeMode_Both" "Deux yeux"
 "HeadsetView_EyeMode_Left" "Œil gauche"
 "HeadsetView_EyeMode_Right" "Œil droit"
